--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <mdui-button>Hello, world!</mdui-button>
+    <mdui-button>你好，世界！</mdui-button>
   </body>
 </html>
